--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,12 +5,12 @@
 }
 app-menu-side-bar {
    min-width: 230px; 
-  background: yellow;
+  background:rgba(206, 25, 25, 0);
   
 }
 
 app-container {
     flex: 4;
-    background: yellowgreen; 
+    background: rgb(205, 200, 211); 
     position: relative; 
 }
